@@ -839,7 +839,6 @@ div.warning, div.note, div.important {
 	margin: 0px;
 	padding: 0px;
 	background: none;
-	background-color: white;
 	margin-bottom: 1em;
 	border-bottom: 1px solid #aaaaaa;
 	page-break-inside: avoid;
