@@ -76,7 +76,6 @@ part toc
 
 <xsl:param name="suppress.navigation" select="0"/>
 <xsl:param name="suppress.header.navigation" select="0"/>
-<xsl:param name="suppress.footer.navigation" select="0"/>
 
 <xsl:param name="header.rule" select="0"/>
 <xsl:param name="footer.rule" select="0"/>
@@ -619,7 +618,7 @@ Version: 1.72.0
   <xsl:param name="object" select="."/>
   <xsl:param name="title">
     <xsl:apply-templates select="$object" mode="object.title.markup">
-      <xsl:with-param name="allow-anchors" select="1"/>
+      <xsl:with-param name="allow-anchors" select="0"/>
     </xsl:apply-templates>
   </xsl:param>
   <h6><xsl:copy-of select="$title"/></h6>
@@ -951,7 +950,7 @@ because it has to parse lines one by one to place the gfx
       <xsl:with-param name="object" select="$node"/>
     </xsl:call-template>
   </xsl:variable>
-  <xsl:if test="(self::title or self::bridgehead) and substring($id,1,2) = 'id'">
+  <xsl:if test="(self::title and substring($id,1,2) = 'id') or self::bridgehead">
     <xsl:attribute name="id"><xsl:value-of select="$id"/></xsl:attribute>
   </xsl:if>
 </xsl:template>
