@@ -11,7 +11,7 @@
 <body class="menu">
 <div id="wrapper">
 <div id="menu">
-	<div id="lang_menu" class="breadcrumb pants"><a href="[% host %]/[% lang %]/index.html">[% site_title %]</a></div>
+	<div id="lang_menu" class="breadcrumb"><a href="[% host %]/[% lang %]/index.html">[% site_title %]</a></div>
 	<div id="product_menu" class="breadcrumb" onmouseover="work=1; toggle('','product_menu_list');" onmouseout="work=1; toggle('','product_menu_list');">Pants</div>
 [%- IF ver_menu %]
 	<div id="version_menu" class="breadcrumb" onmouseover="work=1; toggle('','version_menu_list');" onmouseout="work=1; toggle('','version_menu_list');"></div>
