@@ -19,6 +19,7 @@
   - Truncate PO Fuzzy/Un-transtaled message, added PO line number. BZ #697380
   - Add Author_Group.xml handling for translations. BZ #697371
   - Split pod from publican command to allow auto-generation.
+  - Fix bridgehead links not working in html. BZ #711348
 
 2.6-3 Thu Jul 28 2011 
   - Force publican to use UTF8 for command line options.
